--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
             </div>
             
         </main>
-        <script src="js/app.js" type="text/javascript"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
